change translation in Home, Header, AboutUs and AboutProject

--- a/src/assets/langs/val.json
+++ b/src/assets/langs/val.json
@@ -5,8 +5,8 @@
     "header__vive_experiencia" : "Viu l'experiència", 
     "header__sobre_nosotros" : "Sobre nosaltres", 
     "home__titulo_principal" : "NOMBRE_PROYECTO: Immersió en la Tradició", 
-    "home_subtitulo" : "Viu les falles des d'un punt de vista únic", 
-    "home_boton" : "Més informació", 
+    "home__subtitulo" : "Viu les falles des d'un punt de vista únic", 
+    "home__boton" : "Més informació", 
     "sobre_proyecto__titulo" : "Sobre el projecte",
     "sobre_proyecto__descripcio" : "NOMBRE_PROYECTO busca apropar la història i tradició de les falles fent pàrticip al jugador. Dins del joc, podrá tallar, pintar, plantar i cremar la falla a la vegada que aprén sobre la història de Les Falles ", 
     "modelos_3d__andamio" : "Andami", 
