Carousel para mostrar los modelos 3D (En proceso)

--- a/src/assets/langs/es.json
+++ b/src/assets/langs/es.json
@@ -4,11 +4,11 @@
     "header__modelo_3d" : "Modelos 3D",
     "header__vive_experiencia" : "Vive la experiencia", 
     "header__sobre_nosotros" : "Sobre nosotros", 
-    "home__titulo_principal" : "NOMBRE_PROYECTO: Inmersión en la Tradición", 
+    "home__titulo_principal" : "MEMORIES EN CENDRA: Inmersión en la Tradición", 
     "home__subtitulo" : "Vive las fallas desde un punto de vista único", 
     "home__boton" : "Más información", 
     "sobre_proyecto__titulo" : "Sobre el proyecto",
-    "sobre_proyecto__descripcio" : "NOMBRE_PROYECTO busca acercar la historia y tradición de las fallas haciendo participe al jugador. Dentro del juego, podrá tallar, pintar, plantar y quemar la falla a la vez que aprende sobre la historia de Las Fallas", 
+    "sobre_proyecto__descripcio" : "MEMORIES EN CENDRA busca acercar la historia y tradición de las fallas haciendo participe al jugador. Dentro del juego, podrá tallar, pintar, plantar y quemar la falla a la vez que aprende sobre la historia de Las Fallas", 
     "modelos_3d__andamio" : "Andamio", 
     "modelos_3d__atril" : "Atril", 
     "modelos_3d__cajas" : "Cajas",
