--- a/src/assets/langs/es.json
+++ b/src/assets/langs/es.json
@@ -8,7 +8,19 @@
     "home__subtitulo" : "Vive las fallas desde un punto de vista único", 
     "home__boton" : "Más información", 
     "sobre_proyecto__titulo" : "Sobre el proyecto",
-    "sobre_proyecto__descripcio" : "MEMORIES EN CENDRA busca acercar la historia y tradición de las fallas haciendo participe al jugador. Dentro del juego, podrá tallar, pintar, plantar y quemar la falla a la vez que aprende sobre la historia de Las Fallas", 
+    "sobre_proyecto__descripcion" : "MEMORIES EN CENDRA busca acercar la historia y tradición de las fallas haciendo participe al jugador. Dentro del juego, podrá tallar, pintar, plantar y quemar la falla a la vez que aprende sobre la historia de Las Fallas", 
+    "sobre_proyecto__subtitulo":"algo",
+    "sobre_proyecto__seccion1":"¿En que consiste?",
+    "sobre_proyecto__objetivo1":"Coger el cuchillo para tallar los 'ninots'",
+    "sobre_proyecto__objetivo2":"Pintar la falla con el aerógrafo",
+    "sobre_proyecto__objetivo3":"Plantar la falla en la Plaza del Ayuntamiento de Valencia",
+    "sobre_proyecto__objetivo4":"¡Quemar la falla!",
+    "sobre_proyecto__seccion2":"¿Que tecnologías utilizamos?",
+    "sobre_proyecto__seccion2_descripcion":"Para crear esta Realidad Virtual hemos utilizado Unity. La funcionalidad se ha realizado mediante Scripts en lenguaje C#, mientras que todos los modelados que apareccen en la escena han sido realizados con Maya. ",
+    "sobre_proyecto__seccion3":"Proposito",
+    "sobre_proyecto__boton":"Más información",
+    "modelos3d__titulo":"Modelos 3D",
+    "modelos3d__descripcion":"Todos los Modelos 3D que aparecen en las diferentes escenas han sido modelados por el equipo para este proyecto.",
     "modelos_3d__andamio" : "Andamio", 
     "modelos_3d__atril" : "Atril", 
     "modelos_3d__cajas" : "Cajas",
@@ -20,6 +32,8 @@
     "modelos_3d__mesa_taller" : "Mesa de herramientas", 
     "modelos_3d__pale" : "Palé", 
     "modelos_3d__tijeras" : "Tijeras", 
+    "vive_experiencia__titulo":"Vive la experiencia",
+    "vive_experiencia__descripcion":"Experimenta desde fuera de la Realidad Virtual la creación de La Falla en el taller fallero, la 'Plantà' en la Plaza del Ayuntamiento y la 'Cremà' del monumento",
     "sobre_nosotros__titulo" : "Sobre nosotros", 
     "sobre_nosotros__" : ""
 }
