--- a/src/assets/langs/val.json
+++ b/src/assets/langs/val.json
@@ -4,11 +4,23 @@
     "header__modelo_3d" : "Models 3D",
     "header__vive_experiencia" : "Viu l'experiència", 
     "header__sobre_nosotros" : "Sobre nosaltres", 
-    "home__titulo_principal" : "MEMORIES EN CENDRA: Immersió en la Tradició", 
+    "home__titulo_principal" : "MEMÒRIES EN CENDRA: Immersió en la Tradició", 
     "home__subtitulo" : "Viu les falles des d'un punt de vista únic", 
     "home__boton" : "Més informació", 
     "sobre_proyecto__titulo" : "Sobre el projecte",
-    "sobre_proyecto__descripcio" : "MEMORIES EN CENDRA busca apropar la història i tradició de les falles fent pàrticip al jugador. Dins del joc, podrá tallar, pintar, plantar i cremar la falla a la vegada que aprén sobre la història de Les Falles ", 
+    "sobre_proyecto__descripcion" : "MEMÒRIES EN CENDRA busca apropar la història i tradició de les falles fent pàrticip al jugador. Dins del joc, podrá tallar, pintar, plantar i cremar la falla a la vegada que aprén sobre la història de Les Falles ", 
+    "sobre_proyecto__subtitulo":"algo",
+    "sobre_proyecto__seccion1":"¿En què consisteix?",
+    "sobre_proyecto__objetivo1":"Agarrar el ganivet per a tallar els ninots",
+    "sobre_proyecto__objetivo2":"Pintar la falla amb  l'aerògraf",
+    "sobre_proyecto__objetivo3":"Plantar la falla a la Plaça de l'Ajuntament de València",
+    "sobre_proyecto__objetivo4":"¡Cremar la falla!",
+    "sobre_proyecto__seccion2":"¿Quines tecnologíes utilitzem?",
+    "sobre_proyecto__seccion2_descripcion":"Per a crear aquesta Realitat Virtual hem utilitzat Unity. La funcionalitat s'ha realitzat mitjançant Scripts en llenguatge C#, mentres que tots els modelats que apareixen en l'escena han sigut realitzats amb Maya. ",  
+    "sobre_proyecto__seccion3":"Propòsit",
+    "sobre_proyecto__boton":"Més informació", 
+    "modelos3d__titulo":"Models 3D",
+    "modelos3d__descripcion":"Tots els models que apareixen en les diferents escenes han sigut modelats per l'equip per a aquest projecte.",
     "modelos_3d__andamio" : "Andami", 
     "modelos_3d__atril" : "Atril", 
     "modelos_3d__cajas" : "Caixes",
@@ -20,6 +32,9 @@
     "modelos_3d__mesa_taller" : "Taula de ferramentes", 
     "modelos_3d__pale" : "Palet", 
     "modelos_3d__tijeras" : "Tisores", 
+    "vive_experiencia__titulo":"Viu l'experiència",
+    "vive_experiencia__descripcion":"Experimenta desde fora de la Realitat Virtual la creació de La Falla en el taller faller, la 'Plantà' en la Plaça de l'Ajuntament i de la 'Cremà' del monument",
+
     "sobre_nosotros__titulo" : "Sobre nosaltres", 
     "sobre_nosotros" : ""
 }
