making responsive home

--- a/src/assets/langs/es.json
+++ b/src/assets/langs/es.json
@@ -4,7 +4,8 @@
     "header__modelo_3d" : "Modelos 3D",
     "header__vive_experiencia" : "Vive la experiencia", 
     "header__sobre_nosotros" : "Sobre nosotros", 
-    "home__titulo_principal" : "MEMORIES EN CENDRA: Inmersión en la Tradición", 
+    "home__titulo_principal" : "MEMORIES EN CENDRA: ", 
+    "home__titulo_principal_inmersio" : "Inmersión en la Tradición", 
     "home__subtitulo" : "Vive las fallas desde un punto de vista único", 
     "home__boton" : "Más información", 
     "sobre_proyecto__titulo" : "Sobre el proyecto",
