--- a/src/assets/langs/val.json
+++ b/src/assets/langs/val.json
@@ -4,7 +4,8 @@
     "header__modelo_3d" : "Models 3D",
     "header__vive_experiencia" : "Viu l'experiència", 
     "header__sobre_nosotros" : "Sobre nosaltres", 
-    "home__titulo_principal" : "MEMÒRIES EN CENDRA: Immersió en la Tradició", 
+    "home__titulo_principal" : "MEMÒRIES EN CENDRA: ", 
+    "home__titulo_principal_inmersio" : "Immersió en la Tradició", 
     "home__subtitulo" : "Viu les falles des d'un punt de vista únic", 
     "home__boton" : "Més informació", 
     "sobre_proyecto__titulo" : "Sobre el projecte",
