making about project responsive. show or hide header on scroll in process

--- a/src/assets/langs/es.json
+++ b/src/assets/langs/es.json
@@ -10,7 +10,7 @@
     "home__boton" : "Más información", 
     "sobre_proyecto__titulo" : "Sobre el proyecto",
     "sobre_proyecto__descripcion" : "MEMORIES EN CENDRA busca acercar la historia y tradición de las fallas haciendo participe al jugador. Dentro del juego, podrá tallar, pintar, plantar y quemar la falla a la vez que aprende sobre la historia de Las Fallas", 
-    "sobre_proyecto__subtitulo":"algo",
+    "sobre_proyecto__subtitulo":"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.",
     "sobre_proyecto__seccion1":"¿En que consiste?",
     "sobre_proyecto__objetivo1":"Coger el cuchillo para tallar los 'ninots'",
     "sobre_proyecto__objetivo2":"Pintar la falla con el aerógrafo",
