--- a/src/assets/langs/val.json
+++ b/src/assets/langs/val.json
@@ -10,7 +10,7 @@
     "home__boton" : "Més informació", 
     "sobre_proyecto__titulo" : "Sobre el projecte",
     "sobre_proyecto__descripcion" : "MEMÒRIES EN CENDRA busca apropar la història i tradició de les falles fent pàrticip al jugador. Dins del joc, podrá tallar, pintar, plantar i cremar la falla a la vegada que aprén sobre la història de Les Falles ", 
-    "sobre_proyecto__subtitulo":"algo",
+    "sobre_proyecto__subtitulo":"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.",
     "sobre_proyecto__seccion1":"¿En què consisteix?",
     "sobre_proyecto__objetivo1":"Agarrar el ganivet per a tallar els ninots",
     "sobre_proyecto__objetivo2":"Pintar la falla amb  l'aerògraf",
