section technologies in about project section

--- a/src/assets/langs/es.json
+++ b/src/assets/langs/es.json
@@ -17,7 +17,13 @@
     "sobre_proyecto__objetivo3":"Plantar la falla en la Plaza del Ayuntamiento de Valencia",
     "sobre_proyecto__objetivo4":"¡Quemar la falla!",
     "sobre_proyecto__seccion2":"¿Que tecnologías utilizamos?",
-    "sobre_proyecto__seccion2_descripcion":"Para crear esta Realidad Virtual hemos utilizado Unity. La funcionalidad se ha realizado mediante Scripts en lenguaje C#, mientras que todos los modelados que apareccen en la escena han sido realizados con Maya. ",
+    "sobre_proyecto__seccion2_tecnologia1_nombre":" Unity: ",
+    "sobre_proyecto__seccion2_descripcion":"Este proyecto de realidad virtual ha sido posible gracias a la combinación de Unity como motor de desarrollo, C# para la programación de interraciones y funcionalidad y Maya, Fusion360 y NomadSculpt para la creación de modelos y escenarios.",
+    "sobre_proyecto__seccion2_tecnologia1":"Plataforma sobre la cual se construye la experiencia de realidad virtual, proporcionando las herramientas necesarias para crear y desplegar contenido interactivo en un entorno virtua",
+    "sobre_proyecto__seccion2_tecnologia2_nombre":" C#: ",
+    "sobre_proyecto__seccion2_tecnologia2":"Lenguaje de programación orientado a objetos ampliamente utilizado en el desarrollo de software, incluyendo aplicaciones, videojuegos y, en este caso, experiencias de realidad virtual ",
+    "sobre_proyecto__seccion2_tecnologia3_nombre":" Maya, Fusion360 y NomadSculpt: ",
+    "sobre_proyecto__seccion2_tecnologia3":"Softwares de animación 3D y modelado ampliamente utilizado en la industria del entretenimiento para la creación de personajes, escenarios y efectos visuales",
     "sobre_proyecto__seccion3":"Proposito",
     "sobre_proyecto__boton":"Más información",
     "modelos3d__titulo":"Modelos 3D",
