--- a/src/assets/langs/val.json
+++ b/src/assets/langs/val.json
@@ -11,13 +11,19 @@
     "sobre_proyecto__titulo" : "Sobre el projecte",
     "sobre_proyecto__descripcion" : "MEMÒRIES EN CENDRA busca apropar la història i tradició de les falles fent pàrticip al jugador. Dins del joc, podrá tallar, pintar, plantar i cremar la falla a la vegada que aprén sobre la història de Les Falles ", 
     "sobre_proyecto__subtitulo":"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.",
-    "sobre_proyecto__seccion1":"¿En què consisteix?",
-    "sobre_proyecto__objetivo1":"Agarrar el ganivet per a tallar els ninots",
-    "sobre_proyecto__objetivo2":"Pintar la falla amb  l'aerògraf",
-    "sobre_proyecto__objetivo3":"Plantar la falla a la Plaça de l'Ajuntament de València",
-    "sobre_proyecto__objetivo4":"¡Cremar la falla!",
+    "sobre_proyecto__seccion1":" ¿En què consisteix?",
+    "sobre_proyecto__objetivo1":" Agarrar el ganivet per a tallar els ninots",
+    "sobre_proyecto__objetivo2":" Pintar la falla amb  l'aerògraf",
+    "sobre_proyecto__objetivo3":" Plantar la falla a la Plaça de l'Ajuntament de València",
+    "sobre_proyecto__objetivo4":" ¡Cremar la falla!",
     "sobre_proyecto__seccion2":"¿Quines tecnologíes utilitzem?",
-    "sobre_proyecto__seccion2_descripcion":"Per a crear aquesta Realitat Virtual hem utilitzat Unity. La funcionalitat s'ha realitzat mitjançant Scripts en llenguatge C#, mentres que tots els modelats que apareixen en l'escena han sigut realitzats amb Maya. ",  
+    "sobre_proyecto__seccion2_descripcion":"Aquest projecte de realitat virtual ha sigut possible gràcies a la combinació de Unity com a motor de desenvolupament, C# per a la programació d'interaccions i funcionalitat i Maya, Fusion360 i NomadSculpt per a la creació de models i escenaris.",
+    "sobre_proyecto__seccion2_tecnologia1_nombre":" Unity: ",
+    "sobre_proyecto__seccion2_tecnologia1":"Plataforma sobre la qual es construeix l'experiència de Realitat Virtual, proporcionant les ferramentes necessàries per a crear i desplegar contingut interactiu en un entorn virtual",
+    "sobre_proyecto__seccion2_tecnologia2_nombre":" C#: ",
+    "sobre_proyecto__seccion2_tecnologia2":"Llenguatge de programació orientat a objectes ampliament utilitzat en el desenvolupament de software, incloent aplicacions, videojocs i, en aquest cas, experiències de Realitat Virtual",
+    "sobre_proyecto__seccion2_tecnologia3_nombre":" Maya, Fusion360 i NomadSculpt: ",
+    "sobre_proyecto__seccion2_tecnologia3":"Softwares d'animació 3D i modelat ampliamente utilitzat en l'industria de l'entreteniment per a la creació de personatges, escenaris i efectes visuals",
     "sobre_proyecto__seccion3":"Propòsit",
     "sobre_proyecto__boton":"Més informació", 
     "modelos3d__titulo":"Models 3D",
