--- a/src/assets/langs/val.json
+++ b/src/assets/langs/val.json
@@ -39,8 +39,8 @@
     "modelos_3d__mesa_taller" : "Taula de ferramentes", 
     "modelos_3d__pale" : "Palet", 
     "modelos_3d__tijeras" : "Tisores", 
-    "vive_experiencia__titulo":"Viu l'experiència",
-    "vive_experiencia__descripcion":"Experimenta desde fora de la Realitat Virtual la creació de La Falla en el taller faller, la 'Plantà' en la Plaça de l'Ajuntament i de la 'Cremà' del monument",
+    "accesibilidad__titulo":"Accessibilitat i SmartCity",
+    "accesibilidad__descripcion":"Experimenta desde fora de la Realitat Virtual la creació de La Falla en el taller faller, la 'Plantà' en la Plaça de l'Ajuntament i de la 'Cremà' del monument",
 
     "sobre_nosotros__titulo" : "Sobre nosaltres", 
     "sobre_nosotros" : ""
