--- a/src/assets/langs/es.json
+++ b/src/assets/langs/es.json
@@ -48,5 +48,6 @@
     "accesibilidad__smartcity_descripcion_p2":"Este proyecto aprovecha la tecnología para recrear una experiencia cultural arraigada en la tradición posicionando a Valencia como un referente en la vanguardia de las ciudades inteligentes.",
     "accesibilidad__accesibilidad_descripcion_p2":"Personas de edades y capacidades diversas pueden participar en la creación y disfrute de las Fallas sin preocuparse por limitaciones físicas o geográficas.",
     "sobre_nosotros__titulo" : "Sobre nosotros", 
-    "sobre_nosotros__" : ""
-}
+    "sobre_nosotros__subtitulo" : "El equipo de 'Memòries en Cendra' está compuesto por estudiantes de Ingeniera Informática y estudiantes del Màster de Tecnologias Interactivas y Fabricación Digital",
+    "sobre_nosotros__informatica_descripcion":"Funcionalidad en Unity mediante Scripts y Desarrollo de esta 'Landing Page'"  
+}   
