--- a/src/assets/langs/val.json
+++ b/src/assets/langs/val.json
@@ -48,5 +48,7 @@
     "accesibilidad__smartcity_descripcion_p1":"Memòries en cendra contribuye al objetivo de convertir Valencia en una SmartCity aprovechando la tecnología para recrear una experiencia cultural arraigada en la tradición y como herramienta para enriquecer la vida urbana y la participación ciudadana",
     "accesibilidad__smartcity_descripcion_p2":"Aquest projecte aprofita la tecnología per a recrear una experiència cultural arraigada en la tradició posicionant a València com a referent en l'avantguarda de las ciutats intel·ligents.",
     "sobre_nosotros__titulo" : "Sobre nosaltres", 
-    "sobre_nosotros" : ""
+    "sobre_nosotros__subtitulo" : "L'equip de 'Memòries en Cendra' està format per estudiants d'Enginyeria Informàtica i estudiants del Màster de Tecnologies Interactices i Fabricació Digital",
+    "sobre_nosotros__informatica_descripcion":"Funcionalitat en Unity mitjançant Scripts i Desenvolupament d'aquesta 'Landing Page'"  
+
 }
