--- a/src/assets/langs/es.json
+++ b/src/assets/langs/es.json
@@ -49,5 +49,6 @@
     "accesibilidad__accesibilidad_descripcion_p2":"Personas de edades y capacidades diversas pueden participar en la creación y disfrute de las Fallas sin preocuparse por limitaciones físicas o geográficas.",
     "sobre_nosotros__titulo" : "Sobre nosotros", 
     "sobre_nosotros__subtitulo" : "El equipo de 'Memòries en Cendra' está compuesto por estudiantes de Ingeniera Informática y estudiantes del Màster de Tecnologias Interactivas y Fabricación Digital",
-    "sobre_nosotros__informatica_descripcion":"Funcionalidad en Unity mediante Scripts y Desarrollo de esta 'Landing Page'"  
+    "sobre_nosotros__informatica_descripcion":"Funcionalidad en Unity mediante Scripts y Desarrollo de esta 'Landing Page'", 
+    "descripcion_modelo_falla":"Esta es la falla principal del joc" 
 }   
