Escribiendo contenido de la web

--- a/src/assets/langs/es.json
+++ b/src/assets/langs/es.json
@@ -24,8 +24,22 @@
     "sobre_proyecto__seccion2_tecnologia2":"Lenguaje de programación orientado a objetos ampliamente utilizado en el desarrollo de software, incluyendo aplicaciones, videojuegos y, en este caso, experiencias de realidad virtual ",
     "sobre_proyecto__seccion2_tecnologia3_nombre":" Maya, Fusion360 y NomadSculpt: ",
     "sobre_proyecto__seccion2_tecnologia3":"Softwares de animación 3D y modelado ampliamente utilizado en la industria del entretenimiento para la creación de personajes, escenarios y efectos visuales",
-    "sobre_proyecto__seccion3":"Proposito",
+    "sobre_proyecto__seccion3":"Roles en el equipo",
+    "sobre_proyecto__seccion3_descripcion":"Para la realización de este proyecto se ha combinado las habilidades de dos ámbitos distintos",
+    "sobre_proyecto__seccion3_desarrollo_titulo":" Ingenieria Informática: ",
+    "sobre_proyecto__seccion3_desarrollo":"Centrado en la creación de scripts en Unity y desarrollo de la página web",
+    "sobre_proyecto__seccion3_diseño_titulo":" Máster en Fabricación Digital y Tecnologias Interactivas: ",
+    "sobre_proyecto__seccion3_diseño":"Centrado en el modelado 3D, la creación de la identidad visual y Unity",
     "sobre_proyecto__boton":"Más información",
+    "enfoqueSAS__sostenibilidad_titulo":"Fomentamos la sostenibilidad",
+    "enfoqueSAS__sostenibilidad_p1":"nuestro objetivo es reducir el impacto medioambiental, especialmente en entornos educativos. Históricamente, la celebración de las Fallas ha implicado la quema de una falla, una práctica arraigada en nuestra cultura. En los colegios se suele replicar este acto para que los jóvenes vivan la experiencia desde la escuela.",
+    "enfoqueSAS__sostenibilidad_p2":"",
+    "enfoqueSAS__accesibilidad_titulo":"Apostamos por la accesibilidad",
+    "enfoqueSAS__accesibilidad_p1":"",
+    "enfoqueSAS__accesibilidad_p2":"",
+    "enfoqueSAS__smartcity_titulo":"Convertimos Valencia en una ciudad más inteligente",
+    "enfoqueSAS__smartcity_p1":"",
+    "enfoqueSAS__smartcity_p2":"",
     "modelos3d__titulo":"Modelos 3D",
     "modelos3d__descripcion":"Todos los Modelos 3D que aparecen en las diferentes escenas han sido modelados por el equipo para este proyecto.",
     "modelos_3d__andamio" : "Andamio", 
