--- a/src/assets/langs/val.json
+++ b/src/assets/langs/val.json
@@ -24,8 +24,22 @@
     "sobre_proyecto__seccion2_tecnologia2":"Llenguatge de programació orientat a objectes ampliament utilitzat en el desenvolupament de software, incloent aplicacions, videojocs i, en aquest cas, experiències de Realitat Virtual",
     "sobre_proyecto__seccion2_tecnologia3_nombre":" Maya, Fusion360 i NomadSculpt: ",
     "sobre_proyecto__seccion2_tecnologia3":"Softwares d'animació 3D i modelat ampliamente utilitzat en l'industria de l'entreteniment per a la creació de personatges, escenaris i efectes visuals",
-    "sobre_proyecto__seccion3":"Propòsit",
+    "sobre_proyecto__seccion3":"Rols en l'equip",
+    "sobre_proyecto__seccion3_descripcion":"Per a la realització d'aquest projecte s'han combinat les habilitats de dos àmbits diferents",
+    "sobre_proyecto__seccion3_desarrollo_titulo":" Ingeniera Informàtica: ",
+    "sobre_proyecto__seccion3_desarrollo":"Centrat en la creació d'scrips en Unity i desenvolupament de la pàgina web en React",
+    "sobre_proyecto__seccion3_diseño_titulo":" Máster en Fabricació Digital i Tecnologies Interactives: ",
+    "sobre_proyecto__seccion3_diseño":"Centrar en el modelatge 3D, la creació de la identitat visual i Unity",
     "sobre_proyecto__boton":"Més informació", 
+    "enfoqueSAS__sostenibilidad_p1":"Nuestro objetivo es reducir el impacto medioambiental, especialmente en entornos educativos. Históricamente, la celebración de las Fallas ha implicado la quema de una falla, una práctica arraigada en nuestra cultura. En los colegios se suele replicar este acto para que los jóvenes vivan la experiencia desde la escuela.",
+    "enfoqueSAS__sostenibilidad_p2":"",
+    "enfoqueSAS__accesibilidad_p1":"",
+    "enfoqueSAS__accesibilidad_p2":"",
+    "enfoqueSAS__smartcity_p1":"",
+    "enfoqueSAS__smartcity_p2":"",
+    "enfoqueSAS__sostenibilidad_titulo":"Fomentem la sostenibilitat",
+    "enfoqueSAS__accesibilidad_titulo":"Apostem per l'accessibilitat",
+    "enfoqueSAS__smartcity_titulo":"Convertim València en una ciutat més intel·ligent",
     "modelos3d__titulo":"Models 3D",
     "modelos3d__descripcion":"Tots els models que apareixen en les diferents escenes han sigut modelats per l'equip per a aquest projecte.",
     "modelos_3d__andamio" : "Andami", 
