write and transalate enfoque SAS

--- a/src/assets/langs/es.json
+++ b/src/assets/langs/es.json
@@ -32,11 +32,11 @@
     "sobre_proyecto__seccion3_diseño":"Centrado en el modelado 3D, la creación de la identidad visual y Unity",
     "sobre_proyecto__boton":"Más información",
     "enfoqueSAS__sostenibilidad_titulo":"Fomentamos la sostenibilidad",
-    "enfoqueSAS__sostenibilidad_p1":"nuestro objetivo es reducir el impacto medioambiental, especialmente en entornos educativos. Históricamente, la celebración de las Fallas ha implicado la quema de una falla, una práctica arraigada en nuestra cultura. En los colegios se suele replicar este acto para que los jóvenes vivan la experiencia desde la escuela.",
-    "enfoqueSAS__sostenibilidad_p2":"",
+    "enfoqueSAS__sostenibilidad_p1":"Nuestro objetivo es reducir el impacto medioambiental, especialmente en entornos educativos. En los colegios se suele replicar la creación y quema de una falla para que los jóvenes vivan la experiencia y aprendan sobre esta tradición desde la escuela.",
+    "enfoqueSAS__sostenibilidad_p2":"Memòries en Cendra busca crear una experiencia que se acerque al público joven y fomente su amor por la festividad, al mismo tiempo que aprenden sobre esta tradición y se promueven prácticas ambientales responsables",
     "enfoqueSAS__accesibilidad_titulo":"Apostamos por la accesibilidad",
-    "enfoqueSAS__accesibilidad_p1":"",
-    "enfoqueSAS__accesibilidad_p2":"",
+    "enfoqueSAS__accesibilidad_p2":"Estas elementos nos permiten también que este proyecto pueda ser disfrutado por aquellas personas que tengan restricciones en alguno de estos sentidos",
+    "enfoqueSAS__accesibilidad_p1":"Actualmente los jóvenes están más familiarizados con la tecnología y tienen una mayor facilidad para interactuar con ella. Por ello, queremos garantizar que las personas mayores, que pueden no estar tan familiarizadas con estas formas de interacción, puedan participar de manera igualmente sencilla. Mediante instrucciones visuales y auditivas para facilitar su experiencia y minimizar las frustraciones. ",
     "enfoqueSAS__smartcity_titulo":"Convertimos Valencia en una ciudad más inteligente",
     "enfoqueSAS__smartcity_p1":"",
     "enfoqueSAS__smartcity_p2":"",
