--- a/src/assets/langs/val.json
+++ b/src/assets/langs/val.json
@@ -32,8 +32,8 @@
     "sobre_proyecto__seccion3_diseño":"Centrar en el modelatge 3D, la creació de la identitat visual i Unity",
     "sobre_proyecto__boton":"Més informació", 
     "enfoqueSAS__sostenibilidad_p1":"Nuestro objetivo es reducir el impacto medioambiental, especialmente en entornos educativos. Históricamente, la celebración de las Fallas ha implicado la quema de una falla, una práctica arraigada en nuestra cultura. En los colegios se suele replicar este acto para que los jóvenes vivan la experiencia desde la escuela.",
-    "enfoqueSAS__sostenibilidad_p2":"",
-    "enfoqueSAS__accesibilidad_p1":"",
+    "enfoqueSAS__sostenibilidad_p2":"Memòries en Cendra busca crear una experiencia que se acerque al público joven y fomente su amor por la festividad, al mismo tiempo que promueve prácticas ambientales responsables",
+    "enfoqueSAS__accesibilidad_p1":"Nos hemos esforzado por hacer que este proyecto pueda ser disfrutado por el mayor número posible de personas, incluyendo indicaciones tanto visuales como auditivas para aquellas personas que puedan tener restricciones en alguno de de estos sentidos",
     "enfoqueSAS__accesibilidad_p2":"",
     "enfoqueSAS__smartcity_p1":"",
     "enfoqueSAS__smartcity_p2":"",
