--- a/src/assets/langs/es.json
+++ b/src/assets/langs/es.json
@@ -31,6 +31,8 @@
     "sobre_proyecto__seccion3_diseño_titulo":" Máster en Fabricación Digital y Tecnologias Interactivas: ",
     "sobre_proyecto__seccion3_diseño":"Centrado en el modelado 3D, la creación de la identidad visual y Unity",
     "sobre_proyecto__boton":"Más información",
+    "enfoqueSAS__titulo":"Enfoque S.A.S: ", 
+    "enfoqueSAS__subtitulo":"Sostenibilidad, Accesibilidad y SmartCity", 
     "enfoqueSAS__sostenibilidad_titulo":"Fomentamos la sostenibilidad",
     "enfoqueSAS__sostenibilidad_p1":"Nuestro objetivo es reducir el impacto medioambiental, especialmente en entornos educativos. En los colegios se suele replicar la creación y quema de una falla para que los jóvenes vivan la experiencia y aprendan sobre esta tradición desde la escuela.",
     "enfoqueSAS__sostenibilidad_p2":"Memòries en Cendra busca crear una experiencia que se acerque al público joven y fomente su amor por la festividad, al mismo tiempo que aprenden sobre esta tradición y se promueven prácticas ambientales responsables",
@@ -38,8 +40,8 @@
     "enfoqueSAS__accesibilidad_p2":"Estas elementos nos permiten también que este proyecto pueda ser disfrutado por aquellas personas que tengan restricciones en alguno de estos sentidos",
     "enfoqueSAS__accesibilidad_p1":"Actualmente los jóvenes están más familiarizados con la tecnología y tienen una mayor facilidad para interactuar con ella. Por ello, queremos garantizar que las personas mayores, que pueden no estar tan familiarizadas con estas formas de interacción, puedan participar de manera igualmente sencilla. Mediante instrucciones visuales y auditivas para facilitar su experiencia y minimizar las frustraciones. ",
     "enfoqueSAS__smartcity_titulo":"Convertimos Valencia en una ciudad más inteligente",
-    "enfoqueSAS__smartcity_p1":"",
-    "enfoqueSAS__smartcity_p2":"",
+    "enfoqueSAS__smartcity_p1":"Este proyecto impulsa la innovación tecnológica en Valencia, atrayendo talento y empresas relacionadas con la realidad virtual, la realidad aumentada y otras tecnologías emergentes. De esta forma se contribuye al desarrollo económico y al posicionamiento de Valencia como un centro de innovación.",
+    "enfoqueSAS__smartcity_p2":"A través de esta experiencia inmersiva se permite a los turistas explorar las Fallas desde cualquier parte del mundo. Esto no solo promueve el turismo, sino que también puede ayudar a gestionar el flujo de visitantes de manera más eficiente.",
     "modelos3d__titulo":"Modelos 3D",
     "modelos3d__descripcion":"Todos los Modelos 3D que aparecen en las diferentes escenas han sido modelados por el equipo para este proyecto.",
     "modelos_3d__andamio" : "Andamio", 
