--- a/src/assets/langs/val.json
+++ b/src/assets/langs/val.json
@@ -31,12 +31,14 @@
     "sobre_proyecto__seccion3_diseño_titulo":" Máster en Fabricació Digital i Tecnologies Interactives: ",
     "sobre_proyecto__seccion3_diseño":"Centrar en el modelatge 3D, la creació de la identitat visual i Unity",
     "sobre_proyecto__boton":"Més informació", 
+    "enfoqueSAS__titulo":"Enfocament S.A.S: ", 
+    "enfoqueSAS__subtitulo":"Sostenibilitat, Accesibilitat i SmartCity", 
     "enfoqueSAS__sostenibilidad_p1":"Nuestro objetivo es reducir el impacto medioambiental, especialmente en entornos educativos. Históricamente, la celebración de las Fallas ha implicado la quema de una falla, una práctica arraigada en nuestra cultura. En los colegios se suele replicar este acto para que los jóvenes vivan la experiencia desde la escuela.",
     "enfoqueSAS__sostenibilidad_p2":"Memòries en Cendra busca crear una experiencia que se acerque al público joven y fomente su amor por la festividad, al mismo tiempo que promueve prácticas ambientales responsables",
-    "enfoqueSAS__accesibilidad_p1":"Nos hemos esforzado por hacer que este proyecto pueda ser disfrutado por el mayor número posible de personas, incluyendo indicaciones tanto visuales como auditivas para aquellas personas que puedan tener restricciones en alguno de de estos sentidos",
-    "enfoqueSAS__accesibilidad_p2":"",
-    "enfoqueSAS__smartcity_p1":"",
-    "enfoqueSAS__smartcity_p2":"",
+    "enfoqueSAS__accesibilidad_p2":"Nos hemos esforzado por hacer que este proyecto pueda ser disfrutado por el mayor número posible de personas, incluyendo indicaciones tanto visuales como auditivas para aquellas personas que puedan tener restricciones en alguno de de estos sentidos",
+    "enfoqueSAS__accesibilidad_p1":"Actualment la gent jove está més familiaritzada amb la tecnologia i tenen una major facilitat per interactuar amb ella. Per això, volem garantitzar que les persones majors, que poden no estar tan familiaritzades amb aquestes formes d'interacció, puguen participar de forma igualment sencilla mitjançant instruccions visuals i auditives per facilitar la seua experiència i minimitzar les frustracions.",
+    "enfoqueSAS__smartcity_p1":"Aquest projecte impulsa la innovació tecnològica en València, atraent talent i empreses relacionades amb la realitat virtual, la realidad aumentada y otras tecnologías emergentes. De esta forma se contribuye al desarrollo económico y al posicionamiento de Valencia como un centro de innovación.",
+    "enfoqueSAS__smartcity_p2":"A través de esta experiencia inmersiva se permite a los turistas explorar las Fallas desde cualquier parte del mundo. Esto no solo promueve el turismo, sino que también puede ayudar a gestionar el flujo de visitantes de manera más eficiente.",
     "enfoqueSAS__sostenibilidad_titulo":"Fomentem la sostenibilitat",
     "enfoqueSAS__accesibilidad_titulo":"Apostem per l'accessibilitat",
     "enfoqueSAS__smartcity_titulo":"Convertim València en una ciutat més intel·ligent",
