Cambiar color logo, corregir nombre, cambiar color web

--- a/src/assets/langs/es.json
+++ b/src/assets/langs/es.json
@@ -4,12 +4,12 @@
     "header__modelo_3d" : "Modelos 3D",
     "header__vive_experiencia" : "Vive la experiencia", 
     "header__sobre_nosotros" : "Sobre nosotros", 
-    "home__titulo_principal" : "MEMORIES EN CENDRA: ", 
+    "home__titulo_principal" : "MEMÒRIES EN CENDRA: ", 
     "home__titulo_principal_inmersio" : "Inmersión en la Tradición", 
     "home__subtitulo" : "Vive las fallas desde un punto de vista único", 
     "home__boton" : "Más información", 
     "sobre_proyecto__titulo" : "Sobre el proyecto",
-    "sobre_proyecto__descripcion" : "MEMORIES EN CENDRA busca acercar la historia y tradición de las fallas haciendo participe al jugador. Dentro del juego, podrá tallar, pintar, plantar y quemar la falla a la vez que aprende sobre la historia de Las Fallas", 
+    "sobre_proyecto__descripcion" : "MEMÒRIES EN CENDRA busca acercar la historia y tradición de las fallas haciendo participe al jugador. Dentro del juego, podrá tallar, pintar, plantar y quemar la falla a la vez que aprende sobre la historia de Las Fallas", 
     "sobre_proyecto__subtitulo":"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.",
     "sobre_proyecto__seccion1":"¿En que consiste?",
     "sobre_proyecto__objetivo1":"Coger el cuchillo para tallar los 'ninots'",
