--- a/src/assets/langs/val.json
+++ b/src/assets/langs/val.json
@@ -45,17 +45,42 @@
     "enfoqueSAS__smartcity_titulo":"Convertim València en una ciutat més intel·ligent",
     "modelos3d__titulo":"Models 3D",
     "modelos3d__descripcion":"Tots els models que apareixen en les diferents escenes han sigut modelats per l'equip per a aquest projecte.",
-    "modelos_3d__andamio" : "Andami", 
-    "modelos_3d__atril" : "Atril", 
-    "modelos_3d__cajas" : "Caixes",
-    "modelos_3d__carretilla" : "Carretó", 
-    "modelos_3d__escalera" : "Escala", 
-    "modelos_3d__gafaRV" : "Ulleres RV", 
-    "modelos_3d__logo_Artemis" : "Logo Artemis", 
-    "modelos_3d__mesa_corcho" : "Taula per a tallar", 
-    "modelos_3d__mesa_taller" : "Taula de ferramentes", 
-    "modelos_3d__pale" : "Palet", 
-    "modelos_3d__tijeras" : "Tisores", 
+    "modelo3d__modelo1_titulo":"Monument Principal",
+    "modelo3d__modelo2_titulo":"Ninot Codethon",
+    "modelo3d__modelo3_titulo":"Ajuntament",
+    "modelo3d__modelo4_titulo":"Farola",
+    "modelo3d__modelo5_titulo":"Aerògraf",
+    "modelo3d__modelo6_titulo":"Banc",
+    "modelo3d__modelo7_titulo":"Atril",
+    "modelo3d__modelo8_titulo":"Grup de Caixes",
+    "modelo3d__modelo9_titulo":"Carretilla",
+    "modelo3d__modelo10_titulo":"",
+    "modelo3d__modelo11_titulo":"Escala",
+    "modelo3d__modelo12_titulo":"Font",
+    "modelo3d__modelo13_titulo":"Andami",
+    "modelo3d__modelo14_titulo":"Edifici",
+    "modelo3d__modelo15_titulo":"Edifici",
+    "modelo3d__modelo16_titulo":"Filmoteca de València",
+    "modelo3d__modelo17_titulo":"",
+    "modelo3d__modelo18_titulo":"",
+    "modelo3d__modelo1_descripcion":"",
+    "modelo3d__modelo2_descripcion":"",
+    "modelo3d__modelo3_descripcion":"",
+    "modelo3d__modelo4_descripcion":"",
+    "modelo3d__modelo5_descripcion":"",
+    "modelo3d__modelo6_descripcion":"",
+    "modelo3d__modelo7_descripcion":"",
+    "modelo3d__modelo8_descripcion":"",
+    "modelo3d__modelo9_descripcion":"",
+    "modelo3d__modelo10_descripcion":"",
+    "modelo3d__modelo11_descripcion":"",
+    "modelo3d__modelo12_descripcion":"",
+    "modelo3d__modelo13_descripcion":"",
+    "modelo3d__modelo14_descripcion":"",
+    "modelo3d__modelo15_descripcion":"",
+    "modelo3d__modelo16_descripcion":"",
+    "modelo3d__modelo17_descripcion":"",
+    "modelo3d__modelo18_descripcion":"",
     "accesibilidad__titulo":"Accessibilitat i SmartCity",
     "accesibilidad__left_titulo":"Accesibilidad",
     "accesibilidad__right_titulo":"Valencia SmartCity",
