--- a/src/assets/langs/es.json
+++ b/src/assets/langs/es.json
@@ -45,17 +45,42 @@
     "enfoqueSAS__smartcity_p2":"A través de esta experiencia inmersiva se permite a los turistas explorar las Fallas desde cualquier parte del mundo. Esto no solo promueve el turismo, sino que también puede ayudar a gestionar el flujo de visitantes de manera más eficiente.",
     "modelos3d__titulo":"Modelos 3D",
     "modelos3d__descripcion":"Todos los Modelos 3D que aparecen en las diferentes escenas han sido modelados por el equipo para este proyecto.",
-    "modelos_3d__andamio" : "Andamio", 
-    "modelos_3d__atril" : "Atril", 
-    "modelos_3d__cajas" : "Cajas",
-    "modelos_3d__carretilla" : "Carretilla", 
-    "modelos_3d__escalera" : "Escalera", 
-    "modelos_3d__gafaRV" : "Gafas RV", 
-    "modelos_3d__logo_Artemis" : "Logo Artemis", 
-    "modelos_3d__mesa_corcho" : "Mesa para tallar", 
-    "modelos_3d__mesa_taller" : "Mesa de herramientas", 
-    "modelos_3d__pale" : "Palé", 
-    "modelos_3d__tijeras" : "Tijeras", 
+    "modelo3d__modelo1_titulo":"Monumento Principal",
+    "modelo3d__modelo2_titulo":"Muñeco Codethon",
+    "modelo3d__modelo3_titulo":"Ayuntamiento",
+    "modelo3d__modelo4_titulo":"Farola",
+    "modelo3d__modelo5_titulo":"Aerógrafo",
+    "modelo3d__modelo6_titulo":"Banco",
+    "modelo3d__modelo7_titulo":"Atril",
+    "modelo3d__modelo8_titulo":"Grupo de Cajas",
+    "modelo3d__modelo9_titulo":"Carretilla",
+    "modelo3d__modelo10_titulo":"",
+    "modelo3d__modelo11_titulo":"Escalera",
+    "modelo3d__modelo12_titulo":"Fuente",
+    "modelo3d__modelo13_titulo":"Andamio",
+    "modelo3d__modelo14_titulo":"Edificio",
+    "modelo3d__modelo15_titulo":"Edificio",
+    "modelo3d__modelo16_titulo":"Filmoteca de Valencia",
+    "modelo3d__modelo17_titulo":"",
+    "modelo3d__modelo18_titulo":"",
+    "modelo3d__modelo1_descripcion":"",
+    "modelo3d__modelo2_descripcion":"",
+    "modelo3d__modelo3_descripcion":"",
+    "modelo3d__modelo4_descripcion":"",
+    "modelo3d__modelo5_descripcion":"",
+    "modelo3d__modelo6_descripcion":"",
+    "modelo3d__modelo7_descripcion":"",
+    "modelo3d__modelo8_descripcion":"",
+    "modelo3d__modelo9_descripcion":"",
+    "modelo3d__modelo10_descripcion":"",
+    "modelo3d__modelo11_descripcion":"",
+    "modelo3d__modelo12_descripcion":"",
+    "modelo3d__modelo13_descripcion":"",
+    "modelo3d__modelo14_descripcion":"",
+    "modelo3d__modelo15_descripcion":"",
+    "modelo3d__modelo16_descripcion":"",
+    "modelo3d__modelo17_descripcion":"",
+    "modelo3d__modelo18_descripcion":"",
     "accesibilidad__titulo":"Accesibilidad y SmartCity",
     "accesibilidad__left_titulo":"Accesibilidad",
     "accesibilidad__right_titulo":"Valencia SmartCity",
